--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@builder.io/sdk-qwik": "^0.1.11",
+    "@qwikest/icons": "^0.0.5",
     "open-props": "^1.5.6",
     "postcss-cli": "^10.1.0",
     "postcss-custom-media": "^9.1.2",
